--- a/index.html
+++ b/index.html
@@ -1,55 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <meta name="language" content="French">
-	<meta name="subject" content="Plongée">
-	<meta name="copyright" content="Toulon Plongée">
-	<meta name="description" content="Le centre de plongée de Toulon">
+	<meta name="language" content="French">
+	<meta name="subject" content="Webdev">
+	<meta name="copyright" content="Trois Quarts Indutries">
+	<meta name="description" content="Site de mise en relation de particuliers et de proffessionnels pour une création de site web.">
 	<meta name="author" content="Trois Quarts">
-	<meta name="Identifier-URL" content="http://troisquarts.github.io/">
-	<meta name="Reply-To" content="06 09 43 16 23">
+	<meta name="Identifier-URL" content="https://troisquarts.github.io/">
+	<meta name="Reply-To" content="+33787346170">
 	<meta name="geography" content="Toulon, France, 83000">
-	<meta name="category" content="sports">
+	<meta name="category" content="srvice">
 	<meta name="robots" content="index, nofollow">
 	<meta name="keywords" content="toulon plongée,plongée toulon,plonger à toulon,plongée sur toulon,">
-	<meta property="og:title" content="Toulon Plongée - Accueil"/>
+	<meta property="og:title" content="Trois Quarts - Accueil"/>
 	<meta property="og:type" content="website"/>
-	<meta property="og:url" content="http://www.toulonplongee.com/index.html"/>
-	<meta property="og:image" content="http://www.toulonplongee.com/IMAGES/image.png"/>
-	<meta property="og:image" content=" http://www.toulonplongee.com/IMAGES/prévisualisation.png"/>
-	<meta property="og:image:secure_url" content="https://www.toulonplongee.com/IMAGES/prévisualisation.png"/>
+	<meta property="og:url" content="https://troisquarts.github.io/index.html"/>
+	<meta property="og:image" content="https://troisquarts.github.io/IMAGES/logo.png"/>
+	<meta property="og:image:secure_url" content="https://troisquarts.github.io/IMAGES/logo.png"/>
 	<meta property="og:image:type" content="image/png"/>
-	<meta property="og:image:width" content="1200"/>
-	<meta property="og:image:height" content="627"/>
-	<meta property="og:image:alt" content="Logo"/>
-	<meta property="og:site_name" content="Toulon Plongée"/>
+	<meta property="og:image:width" content="543"/>
+	<meta property="og:image:height" content="324"/>
+	<meta property="og:image:alt" content="Logo Trois Quarts"/>
+	<meta property="og:site_name" content="Trois Quarts"/>
 	<meta property="og:locale" content="fr_FR"/>
-	<meta name="skype_toolbar" content="skype_toolbar_parser_compatible"> -->
-	<link rel="shortcut icon" type="image/jpg" href="IMAGES/">
-	<!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<meta name="skype_toolbar" content="skype_toolbar_parser_compatible">
+	<link rel="shortcut icon" type="image/jpg" href="IMAGES/logo_onglet.png">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="CSS\general.css">
-	<title>Accueil</title>
+	<title>Trois Quarts</title>
 </head>
 <body>
-		<div class="container mt-5">
-			<center>
-			<img class="item-center" style="align-items: center !important;" src="IMAGES/logo.png" alt="Logo Trois Quarts"></center>
-			<div class="row mt-5">
-				<div class="col-6 mt-4">
-					<img src="IMAGES/work-in-progress.png" style="max-height: 80%; max-width: 80%; align-content: flex-start;" alt="work-in-progress">
-			  	</div>
-				<div class="col-6">
-					<h1>Nous travaillons sur notre site pour le rendre encore plus beau que ce qu'il ne l'était déjà.
-            		<br>
-            		Vous pouvez nous contacter au <a href="tel:+33787346170">07 87 34 61 70</a></h1>
-				</div>
-			</div>
+<div class="container">
+	<div class="m-5">
+		<img class="text-center img-fluid mx-auto d-block"  src="IMAGES/logo.png" alt="Logo Trois Quarts">
+	</div>
+	<div class="row mt-5">
+		<div class="col-6 text-center img-fluid mx-auto d-block">
+			<img src="IMAGES/work-in-progress.png" style="max-height: 80%; max-width: 80%; align-content: flex-start;" alt="work-in-progress">
+	  	</div>
+		<div class="col-6 text">
+			Nous travaillons sur notre site pour le rendre encore plus beau que ce qu'il ne l'était déjà.
+	   		<br>
+	   		Vous pouvez nous contacter au <a href="tel:+33787346170">0787346170</a> pour tout renseignement complémentaire.
 		</div>
-    <svg id="wave" style="transform:rotate(0deg); transition: 0.3s" viewBox="0 0 1440 360" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(243, 106, 62, 1)" offset="0%"></stop><stop stop-color="rgba(255, 179, 11, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,180L21.8,162C43.6,144,87,108,131,114C174.5,120,218,168,262,174C305.5,180,349,144,393,138C436.4,132,480,156,524,180C567.3,204,611,228,655,222C698.2,216,742,180,785,162C829.1,144,873,144,916,168C960,192,1004,240,1047,258C1090.9,276,1135,264,1178,222C1221.8,180,1265,108,1309,90C1352.7,72,1396,108,1440,144C1483.6,180,1527,216,1571,198C1614.5,180,1658,108,1702,102C1745.5,96,1789,156,1833,168C1876.4,180,1920,144,1964,126C2007.3,108,2051,108,2095,96C2138.2,84,2182,60,2225,54C2269.1,48,2313,60,2356,66C2400,72,2444,72,2487,78C2530.9,84,2575,96,2618,84C2661.8,72,2705,36,2749,42C2792.7,48,2836,96,2880,102C2923.6,108,2967,72,3011,84C3054.5,96,3098,156,3120,186L3141.8,216L3141.8,360L3120,360C3098.2,360,3055,360,3011,360C2967.3,360,2924,360,2880,360C2836.4,360,2793,360,2749,360C2705.5,360,2662,360,2618,360C2574.5,360,2531,360,2487,360C2443.6,360,2400,360,2356,360C2312.7,360,2269,360,2225,360C2181.8,360,2138,360,2095,360C2050.9,360,2007,360,1964,360C1920,360,1876,360,1833,360C1789.1,360,1745,360,1702,360C1658.2,360,1615,360,1571,360C1527.3,360,1484,360,1440,360C1396.4,360,1353,360,1309,360C1265.5,360,1222,360,1178,360C1134.5,360,1091,360,1047,360C1003.6,360,960,360,916,360C872.7,360,829,360,785,360C741.8,360,698,360,655,360C610.9,360,567,360,524,360C480,360,436,360,393,360C349.1,360,305,360,262,360C218.2,360,175,360,131,360C87.3,360,44,360,22,360L0,360Z"></path><defs><linearGradient id="sw-gradient-1" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(243, 106, 62, 1)" offset="0%"></stop><stop stop-color="rgba(255, 179, 11, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 50px); opacity:0.9" fill="url(#sw-gradient-1)" d="M0,288L21.8,240C43.6,192,87,96,131,84C174.5,72,218,144,262,198C305.5,252,349,288,393,276C436.4,264,480,204,524,174C567.3,144,611,144,655,162C698.2,180,742,216,785,192C829.1,168,873,84,916,78C960,72,1004,144,1047,150C1090.9,156,1135,96,1178,90C1221.8,84,1265,132,1309,168C1352.7,204,1396,228,1440,222C1483.6,216,1527,180,1571,144C1614.5,108,1658,72,1702,78C1745.5,84,1789,132,1833,150C1876.4,168,1920,156,1964,174C2007.3,192,2051,240,2095,246C2138.2,252,2182,216,2225,192C2269.1,168,2313,156,2356,174C2400,192,2444,240,2487,228C2530.9,216,2575,144,2618,114C2661.8,84,2705,96,2749,120C2792.7,144,2836,180,2880,162C2923.6,144,2967,72,3011,48C3054.5,24,3098,48,3120,60L3141.8,72L3141.8,360L3120,360C3098.2,360,3055,360,3011,360C2967.3,360,2924,360,2880,360C2836.4,360,2793,360,2749,360C2705.5,360,2662,360,2618,360C2574.5,360,2531,360,2487,360C2443.6,360,2400,360,2356,360C2312.7,360,2269,360,2225,360C2181.8,360,2138,360,2095,360C2050.9,360,2007,360,1964,360C1920,360,1876,360,1833,360C1789.1,360,1745,360,1702,360C1658.2,360,1615,360,1571,360C1527.3,360,1484,360,1440,360C1396.4,360,1353,360,1309,360C1265.5,360,1222,360,1178,360C1134.5,360,1091,360,1047,360C1003.6,360,960,360,916,360C872.7,360,829,360,785,360C741.8,360,698,360,655,360C610.9,360,567,360,524,360C480,360,436,360,393,360C349.1,360,305,360,262,360C218.2,360,175,360,131,360C87.3,360,44,360,22,360L0,360Z"></path><defs><linearGradient id="sw-gradient-2" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(243, 106, 62, 1)" offset="0%"></stop><stop stop-color="rgba(255, 179, 11, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 100px); opacity:0.8" fill="url(#sw-gradient-2)" d="M0,108L21.8,120C43.6,132,87,156,131,180C174.5,204,218,228,262,210C305.5,192,349,132,393,90C436.4,48,480,24,524,30C567.3,36,611,72,655,72C698.2,72,742,36,785,48C829.1,60,873,120,916,126C960,132,1004,84,1047,54C1090.9,24,1135,12,1178,36C1221.8,60,1265,120,1309,156C1352.7,192,1396,204,1440,228C1483.6,252,1527,288,1571,282C1614.5,276,1658,228,1702,174C1745.5,120,1789,60,1833,84C1876.4,108,1920,216,1964,270C2007.3,324,2051,324,2095,270C2138.2,216,2182,108,2225,66C2269.1,24,2313,48,2356,48C2400,48,2444,24,2487,18C2530.9,12,2575,24,2618,42C2661.8,60,2705,84,2749,108C2792.7,132,2836,156,2880,174C2923.6,192,2967,204,3011,222C3054.5,240,3098,264,3120,276L3141.8,288L3141.8,360L3120,360C3098.2,360,3055,360,3011,360C2967.3,360,2924,360,2880,360C2836.4,360,2793,360,2749,360C2705.5,360,2662,360,2618,360C2574.5,360,2531,360,2487,360C2443.6,360,2400,360,2356,360C2312.7,360,2269,360,2225,360C2181.8,360,2138,360,2095,360C2050.9,360,2007,360,1964,360C1920,360,1876,360,1833,360C1789.1,360,1745,360,1702,360C1658.2,360,1615,360,1571,360C1527.3,360,1484,360,1440,360C1396.4,360,1353,360,1309,360C1265.5,360,1222,360,1178,360C1134.5,360,1091,360,1047,360C1003.6,360,960,360,916,360C872.7,360,829,360,785,360C741.8,360,698,360,655,360C610.9,360,567,360,524,360C480,360,436,360,393,360C349.1,360,305,360,262,360C218.2,360,175,360,131,360C87.3,360,44,360,22,360L0,360Z"></path></svg>
-
+	</div>
+</div>
+<svg id="wave" style="transform:rotate(0deg); transition: 0.3s" viewBox="0 0 1440 360" version="1.1" xmlns="http://www.w3.org/2000/svg">
+	<defs>
+		<linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0">
+			<stop stop-color="rgba(243, 106, 62, 1)" offset="0%"></stop>
+			<stop stop-color="rgba(255, 179, 11, 1)" offset="100%"></stop>
+		</linearGradient>
+	</defs>
+	<path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,180L21.8,162C43.6,144,87,108,131,114C174.5,120,218,168,262,174C305.5,180,349,144,393,138C436.4,132,480,156,524,180C567.3,204,611,228,655,222C698.2,216,742,180,785,162C829.1,144,873,144,916,168C960,192,1004,240,1047,258C1090.9,276,1135,264,1178,222C1221.8,180,1265,108,1309,90C1352.7,72,1396,108,1440,144C1483.6,180,1527,216,1571,198C1614.5,180,1658,108,1702,102C1745.5,96,1789,156,1833,168C1876.4,180,1920,144,1964,126C2007.3,108,2051,108,2095,96C2138.2,84,2182,60,2225,54C2269.1,48,2313,60,2356,66C2400,72,2444,72,2487,78C2530.9,84,2575,96,2618,84C2661.8,72,2705,36,2749,42C2792.7,48,2836,96,2880,102C2923.6,108,2967,72,3011,84C3054.5,96,3098,156,3120,186L3141.8,216L3141.8,360L3120,360C3098.2,360,3055,360,3011,360C2967.3,360,2924,360,2880,360C2836.4,360,2793,360,2749,360C2705.5,360,2662,360,2618,360C2574.5,360,2531,360,2487,360C2443.6,360,2400,360,2356,360C2312.7,360,2269,360,2225,360C2181.8,360,2138,360,2095,360C2050.9,360,2007,360,1964,360C1920,360,1876,360,1833,360C1789.1,360,1745,360,1702,360C1658.2,360,1615,360,1571,360C1527.3,360,1484,360,1440,360C1396.4,360,1353,360,1309,360C1265.5,360,1222,360,1178,360C1134.5,360,1091,360,1047,360C1003.6,360,960,360,916,360C872.7,360,829,360,785,360C741.8,360,698,360,655,360C610.9,360,567,360,524,360C480,360,436,360,393,360C349.1,360,305,360,262,360C218.2,360,175,360,131,360C87.3,360,44,360,22,360L0,360Z"></path>
+	<defs>
+		<linearGradient id="sw-gradient-1" x1="0" x2="0" y1="1" y2="0">
+			<stop stop-color="rgba(243, 106, 62, 1)" offset="0%"></stop>
+			<stop stop-color="rgba(255, 179, 11, 1)" offset="100%"></stop>
+		</linearGradient>
+	</defs>
+	<path style="transform:translate(0, 50px); opacity:0.9" fill="url(#sw-gradient-1)" d="M0,288L21.8,240C43.6,192,87,96,131,84C174.5,72,218,144,262,198C305.5,252,349,288,393,276C436.4,264,480,204,524,174C567.3,144,611,144,655,162C698.2,180,742,216,785,192C829.1,168,873,84,916,78C960,72,1004,144,1047,150C1090.9,156,1135,96,1178,90C1221.8,84,1265,132,1309,168C1352.7,204,1396,228,1440,222C1483.6,216,1527,180,1571,144C1614.5,108,1658,72,1702,78C1745.5,84,1789,132,1833,150C1876.4,168,1920,156,1964,174C2007.3,192,2051,240,2095,246C2138.2,252,2182,216,2225,192C2269.1,168,2313,156,2356,174C2400,192,2444,240,2487,228C2530.9,216,2575,144,2618,114C2661.8,84,2705,96,2749,120C2792.7,144,2836,180,2880,162C2923.6,144,2967,72,3011,48C3054.5,24,3098,48,3120,60L3141.8,72L3141.8,360L3120,360C3098.2,360,3055,360,3011,360C2967.3,360,2924,360,2880,360C2836.4,360,2793,360,2749,360C2705.5,360,2662,360,2618,360C2574.5,360,2531,360,2487,360C2443.6,360,2400,360,2356,360C2312.7,360,2269,360,2225,360C2181.8,360,2138,360,2095,360C2050.9,360,2007,360,1964,360C1920,360,1876,360,1833,360C1789.1,360,1745,360,1702,360C1658.2,360,1615,360,1571,360C1527.3,360,1484,360,1440,360C1396.4,360,1353,360,1309,360C1265.5,360,1222,360,1178,360C1134.5,360,1091,360,1047,360C1003.6,360,960,360,916,360C872.7,360,829,360,785,360C741.8,360,698,360,655,360C610.9,360,567,360,524,360C480,360,436,360,393,360C349.1,360,305,360,262,360C218.2,360,175,360,131,360C87.3,360,44,360,22,360L0,360Z"></path>
+	<defs>
+		<linearGradient id="sw-gradient-2" x1="0" x2="0" y1="1" y2="0">
+			<stop stop-color="rgba(243, 106, 62, 1)" offset="0%"></stop>
+			<stop stop-color="rgba(255, 179, 11, 1)" offset="100%"></stop>
+		</linearGradient>
+	</defs>
+	<path style="transform:translate(0, 100px); opacity:0.8" fill="url(#sw-gradient-2)" d="M0,108L21.8,120C43.6,132,87,156,131,180C174.5,204,218,228,262,210C305.5,192,349,132,393,90C436.4,48,480,24,524,30C567.3,36,611,72,655,72C698.2,72,742,36,785,48C829.1,60,873,120,916,126C960,132,1004,84,1047,54C1090.9,24,1135,12,1178,36C1221.8,60,1265,120,1309,156C1352.7,192,1396,204,1440,228C1483.6,252,1527,288,1571,282C1614.5,276,1658,228,1702,174C1745.5,120,1789,60,1833,84C1876.4,108,1920,216,1964,270C2007.3,324,2051,324,2095,270C2138.2,216,2182,108,2225,66C2269.1,24,2313,48,2356,48C2400,48,2444,24,2487,18C2530.9,12,2575,24,2618,42C2661.8,60,2705,84,2749,108C2792.7,132,2836,156,2880,174C2923.6,192,2967,204,3011,222C3054.5,240,3098,264,3120,276L3141.8,288L3141.8,360L3120,360C3098.2,360,3055,360,3011,360C2967.3,360,2924,360,2880,360C2836.4,360,2793,360,2749,360C2705.5,360,2662,360,2618,360C2574.5,360,2531,360,2487,360C2443.6,360,2400,360,2356,360C2312.7,360,2269,360,2225,360C2181.8,360,2138,360,2095,360C2050.9,360,2007,360,1964,360C1920,360,1876,360,1833,360C1789.1,360,1745,360,1702,360C1658.2,360,1615,360,1571,360C1527.3,360,1484,360,1440,360C1396.4,360,1353,360,1309,360C1265.5,360,1222,360,1178,360C1134.5,360,1091,360,1047,360C1003.6,360,960,360,916,360C872.7,360,829,360,785,360C741.8,360,698,360,655,360C610.9,360,567,360,524,360C480,360,436,360,393,360C349.1,360,305,360,262,360C218.2,360,175,360,131,360C87.3,360,44,360,22,360L0,360Z"></path>
+</svg>
 </body>
 </html>
